[project]
name = "lab1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "cairosvg>=2.7.1",
    "dotenv>=0.9.9",
    "graphviz>=0.20.3",
    "httpx>=0.27.0",
    "jupyter>=1.1.1",
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-deepseek>=0.1.4",
    "langgraph>=0.2.20,<0.3",
    "orjson>=3.10.0",
    "pydantic>=2.7.0",
    "python-dateutil>=2.9.0",
    "rich>=14.2.0",
    "tenacity>=8.2.3",
]
